新增 回收站功能, 包括移入/移出回收站, 彻底删除等功能